--- a/nsqadmin/static/js/views/channel.hbs
+++ b/nsqadmin/static/js/views/channel.hbs
@@ -186,7 +186,7 @@
                 <th>Connected</th>
             </tr>
             {{#each clients}}
-            <tr>
+            <tr style={{#if (eq topology_zone node_topology_zone)}}"background-color:rgb(221,255,221)"{{/if}}{{#if (eq topology_region node_topology_region)}}"background-color:rgb(254,254,194)"{{/if}}>
                 <td title="{{remote_address}}">{{hostname_port}}{{#if show_client_id}} ({{client_id}}){{/if}}</td>
                 <td>{{#if user_agent.length}}<small>{{user_agent}}</small>{{/if}}</td>
                 <td>
@@ -208,6 +208,19 @@
                         <span class="glyphicon glyphicon-user white" title="Authed{{#if auth_identity}} Identity:{{auth_identity}}{{/if}}"></span>
                         {{#if auth_identity_url}}</a>{{/if}}
                         </span>
+                    {{/if}}
+                    {{#if topology_region}}
+                        <span class="label label-default">{{topology_region}}</span>
+                    {{/if}}
+                    {{#if topology_zone}}
+                        <span class="label label-default">{{topology_zone}}</span>
+                    {{/if}}
+                    {{#if (eq topology_zone node_topology_zone)}}
+                        <span class="label label-default">zoneLocal</span>
+                    {{else}}
+                        {{#if (eq topology_region node_topology_region)}}
+                            <span class="label label-default">regionLocal</span>
+                        {{/if}}
                     {{/if}}
                 </td>
                 <td><a class="link" href="{{basePath "/nodes"}}/{{node}}">{{node}}</a></td>
